Support HEIC thumbnails and optimised images