@@ -3,13 +3,13 @@ package com.cbidici.filepreviewer.controller;
 import com.cbidici.filepreviewer.model.view.BreadCrumbViewDto;
 import com.cbidici.filepreviewer.model.view.ContentModelViewDto;
 import com.cbidici.filepreviewer.service.ContentService;
-import com.cbidici.filepreviewer.service.FileService;
+import jakarta.servlet.http.HttpServletRequest;
+import java.nio.charset.StandardCharsets;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 
-import javax.servlet.http.HttpServletRequest;
 import java.io.IOException;
 import java.net.URLDecoder;
 import java.security.NoSuchAlgorithmException;
@@ -33,7 +33,7 @@ public class PreviewController {
     }
 
     @GetMapping("/gallery/**")
-    public String gallery(HttpServletRequest request, Model model) throws IOException, NoSuchAlgorithmException {
+    public String gallery(HttpServletRequest request, Model model) throws IOException {
         String requestURL = request.getRequestURL().toString();
         String path = requestURL.split("/gallery/").length == 1 ? "" : requestURL.split("/gallery/")[1];
 
@@ -44,14 +44,14 @@ public class PreviewController {
         breadCrumbViewDtoList.add(new BreadCrumbViewDto("Home", breadCrumbUrlBuilder.toString()));
         for(String directory : directories) {
             if(!directory.isEmpty()) {
-                breadCrumbUrlBuilder.append("/"+URLDecoder.decode(directory));
-                breadCrumbViewDtoList.add(new BreadCrumbViewDto(URLDecoder.decode(directory,"UTF-8"), breadCrumbUrlBuilder.toString()));
+                breadCrumbUrlBuilder.append("/").append(URLDecoder.decode(directory, StandardCharsets.UTF_8));
+                breadCrumbViewDtoList.add(new BreadCrumbViewDto(URLDecoder.decode(directory, StandardCharsets.UTF_8), breadCrumbUrlBuilder.toString()));
             }
         }
 
-        List<ContentModelViewDto> contents = contentService.getContents(URLDecoder.decode(path, "UTF-8"))
+        List<ContentModelViewDto> contents = contentService.getContents(URLDecoder.decode(path, StandardCharsets.UTF_8))
                 .stream()
-                .map(contentDomain -> ContentModelViewDto.fromDomain(contentDomain))
+                .map(ContentModelViewDto::fromDomain)
                 .collect(Collectors.toList());
 
         model.addAttribute("breadCrumb", breadCrumbViewDtoList);
